<resources>
    <string name="app_name">Calculater</string>
    <string name="action_settings">Settings</string>
    <string name="input">Enter number</string>
    <string name="output">Result</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear">clr</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="square">^2</string>
    <string name="cube">^3</string>
    <string name="squareroot">√</string>
    <string name="divide">÷</string>
</resources>
