<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.deepanshu.calculater.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/input"
        android:hint="@string/input" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:id="@+id/output"
        android:hint="@string/output" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="20dp"
        android:text="@string/one"
        android:id="@+id/one" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="100dp"
        android:text="@string/two"
        android:id="@+id/two" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="180dp"
        android:text="@string/three"
        android:id="@+id/three" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="260dp"
        android:text="@string/clear"
        android:id="@+id/clr" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="20dp"
        android:text="@string/four"
        android:id="@+id/four" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="100dp"
        android:text="@string/five"
        android:id="@+id/five" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="180dp"
        android:text="@string/six"
        android:id="@+id/six" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="260dp"
        android:text="@string/plus"
        android:id="@+id/plus" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="240dp"
        android:layout_marginStart="20dp"
        android:text="@string/seven"
        android:id="@+id/seven" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="240dp"
        android:layout_marginStart="100dp"
        android:text="@string/eight"
        android:id="@+id/eight" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="240dp"
        android:layout_marginStart="180dp"
        android:text="@string/nine"
        android:id="@+id/nine" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="240dp"
        android:layout_marginStart="260dp"
        android:text="@string/minus"
        android:id="@+id/minus" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="20dp"
        android:text="@string/dot"
        android:id="@+id/dot" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="100dp"
        android:text="@string/zero"
        android:id="@+id/zero" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="180dp"
        android:text="@string/equal"
        android:id="@+id/equal" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="260dp"
        android:text="@string/multiply"
        android:id="@+id/multiply" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="360dp"
        android:layout_marginStart="20dp"
        android:text="@string/square"
        android:id="@+id/square" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="360dp"
        android:layout_marginStart="100dp"
        android:text="@string/cube"
        android:id="@+id/cube" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="360dp"
        android:layout_marginStart="180dp"
        android:text="@string/squareroot"
        android:id="@+id/squareroot" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="360dp"
        android:layout_marginStart="260dp"
        android:text="@string/divide"
        android:id="@+id/divide" />

</RelativeLayout>
